# scr4py_3tsy_ver2

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  check_credentials.py  docker-compose.yml  entrypoint.sh  main.py  main_canva.py  main_crawling.py  main_creative_fabrica.py  main_ideogram.py  main_test.py  pyproject.toml  requirements.txt  run-crawler.bat  run.bat  test.ipynb  test.xlsx
crawling_data/: madlywish_20250607_170012.csv  madlywish_20250607_171206.csv  madlywish_20250607_173501.csv  madlywish_20250607_175024.csv  madlywish_20250608_083406.csv
src/: GSheetWriteRead.py  assets.py  logger.py  main.py  main_crawling.py  main_ideogram.py  open_driver.py  settings.py
src/canva/: config.py  controller.py  elems.py  service.py
src/canvas/: config.py  controller.py  elems.py  service.py
src/creative_fabrica/: config.py  controller.py  elems.py  service.py
src/etsy/: controller.py  service.py
src/ideogram/: IdeoElems.py  controller.py  service.py
src/scripts/: init.bat  init.sh
src/sofontsy/: abstract.py  config.py  controller.py  elems.py  master.py  service.py  upload_states.py
src/utils/: ItemGenerator.py  action_utils.py  decorators.py  gg_utils.py  load_env.py  utils.py
tests/: test_gsheet_write.py  test_read_gsheet.py  testwritegsheet.py
