[project]
name = "etsy-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google>=3.0.0",
    "google-api-python-client>=2.188.0",
    "google-auth>=2.47.0",
    "google-auth-oauthlib>=1.2.4",
    "jupyter>=1.1.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "playwright>=1.50.0",
    "pyautogui>=0.9.54",
    "selenium>=4.29.0",
    "webdriver-manager>=4.0.2",
]
